# appsheet-export-parser

./: .gitignore  FORK-GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: berp-app-config.yaml  berp-domains.yaml  example-app-config.yaml  example-domains.yaml
skill/.claude-plugin/: plugin.json
skill/commands/: parse-appsheet.md
skill/skills/appsheet-migration/: SKILL.md
src/appsheet_export_parser/: __init__.py  cli.py  config.py  parser.py  sync.py
src/appsheet_export_parser/analyze/: __init__.py  classifier.py  computed_fields.py  enums.py  relationships.py  validator.py
src/appsheet_export_parser/extract/: __init__.py  cleaner.py  header.py  pdf.py  url.py  url_fetcher.py
src/appsheet_export_parser/generate/: __init__.py  json_output.py
src/appsheet_export_parser/models/: __init__.py  analysis.py  app.py  automation.py  behavior.py  schema.py  ux.py
src/appsheet_export_parser/parse/: __init__.py  action_parser.py  field_parser.py  format_rule_parser.py  json_repair.py  schema_parser.py  section_finder.py  slice_parser.py  view_parser.py
tests/: conftest.py  test_action_parser.py  test_cleaner.py  test_format_rule_parser.py  test_header.py  test_integration.py  test_json_repair.py  test_relationships.py  test_schema_parser.py  test_section_finder.py  test_validator.py  test_view_parser.py
